--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
             <h1>Trisha Boda</h1>
             <!-- <h2>Full Stack Developer | Tech Enthusiast</h2> -->
             <!-- <p>Passionate about creating web applications and solving problems.</p> -->
-            <p>As Michael Harvey writes, paragraphs are “in essence—a form of punctuation, and like other forms of punctuation they are meant to make written material easy to read.”[1] Effective paragraphs are the fundamental units of academic writing; consequently, the thoughtful, multifaceted arguments that your professors expect depend on them. Without good paragraphs, you simply cannot clearly convey sequential points and their relationships to one another. Many novice writers tend to make a sharp distinction between content and style, thinking that a paper can be strong in one and weak in the other, but focusing on organization shows how content and style converge in deliberative academic writing. Your professors will view even the most elegant prose as rambling and tedious if there isn’t a careful, coherent argument to give the text meaning. Paragraphs are the “stuff ” of academic writing and, thus, worth our attention here.</p>
+            <p>I am a passionate and socially active professional with strong leadership and teamwork skills. I am an effective communicator known for prioritizing tasks and maintaining high productivity levels. I am dedicated to achieving goals and driving success through collaboration and efficient task management.</p>
+            <br>
+            <p>Without good paragraphs, you simply cannot clearly convey sequential points and their relationships to one another. Many novice writers tend to make a sharp distinction between content and style, thinking that a paper can be strong in one and weak in the other, but focusing on organization shows how content and style converge in deliberative academic writing. Your professors will view even the most elegant prose as rambling and tedious if there isn’t a careful, coherent argument to give the text meaning. Paragraphs are the “stuff ” of academic writing and, thus, worth our attention here.</p>
             <div class="button-container">
                 <button class="btn btn-color-2" id="linkedin" onclick="window.open('./assets/trishaResume.pdf')">See Resume</button>
                 <!-- <button class="btn btn-color-1" id="github" onclick="location.href = './#contact'">Contact Info</button> -->
@@ -92,6 +94,14 @@
                 <img src="./assets/github.png" alt="Git/GitHub">
                 <p>Git/GitHub</p>
             </div>
+            <div class="skill-card">
+                <img src="./assets/typescript.png" alt="Git/GitHub">
+                <p>typeScript</p>
+            </div>
+            <div class="skill-card">
+                <img src="./assets/mySQL.png" alt="Git/GitHub">
+                <p>MySQL</p>
+            </div>
         </div>
     </section>
     <section id="experience">
@@ -116,9 +126,9 @@
         <h1>Projects</h1>
         <div class="projects-container">
             <div class="project-card">
-                <img src="./assets/project1.png" alt="Project 1">
-                <h2>Project Title 1</h2>
-                <p>Short description of the project.</p>
+                <img src="./assets/weatherApp.png" alt="Project 1">
+                <h2>Weather Forecast Application</h2>
+                <p>Developed a responsive weather forecast application using AngularJS to display current weather conditions along with details such as UV index, humidity, air quality, sunrise and sunset times, and visibility. The app provides an intuitive interface, dynamically updating to ensure accurate and real-time weather data.</p>
                 <a href="#" class="btn btn-color-1">View More</a>
             </div>
             <div class="project-card">
