--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <br>
             <p>Without good paragraphs, you simply cannot clearly convey sequential points and their relationships to one another. Many novice writers tend to make a sharp distinction between content and style, thinking that a paper can be strong in one and weak in the other, but focusing on organization shows how content and style converge in deliberative academic writing. Your professors will view even the most elegant prose as rambling and tedious if there isn’t a careful, coherent argument to give the text meaning. Paragraphs are the “stuff ” of academic writing and, thus, worth our attention here.</p>
             <div class="button-container">
-                <button class="btn btn-color-2" id="linkedin" onclick="window.open('./assets/trishaResume.pdf')">See Resume</button>
+                <button class="btn btn-color-2" id="linkedin" onclick="window.open('./assets/trishaResume1.pdf')">See Resume</button>
                 <!-- <button class="btn btn-color-1" id="github" onclick="location.href = './#contact'">Contact Info</button> -->
             </div>
             <div class="socials-container">
@@ -126,15 +126,16 @@
         <h1>Projects</h1>
         <div class="projects-container">
             <div class="project-card">
-                <img src="./assets/weatherApp.png" alt="Project 1">
                 <h2>Weather Forecast Application</h2>
+                <img src="./assets/weatherApp.png" alt="Project 1">
                 <p>Developed a responsive weather forecast application using AngularJS to display current weather conditions along with details such as UV index, humidity, air quality, sunrise and sunset times, and visibility. The app provides an intuitive interface, dynamically updating to ensure accurate and real-time weather data.</p>
                 <a href="#" class="btn btn-color-1">View More</a>
             </div>
             <div class="project-card">
-                <img src="./assets/project2.png" alt="Project 2">
-                <h2>Project Title 2</h2>
-                <p>Short description of the project.</p>
+                <h2>Subjective Answer Analysis System</h2>
+                <img src="./assets/studentDashboard.png" alt="Project 2">
+                <img src="./assets/teacherDashboard.png" alt="Project 2">
+                <p>Created a system for conducting subjective exams that uses NLP to evaluate student responses. The system calculates a similarity score between the student answers and the teacher's provided answer script, ensuring accurate and fair assessment based on semantic similarity. </p>
                 <a href="#" class="btn btn-color-1">View More</a>
             </div>
             <!-- Add more project cards as needed -->
