--- a/index.html
+++ b/index.html
@@ -44,13 +44,14 @@
         <div class="profile_description">
             <p>Hello I'm</p>
             <h1>Trisha Boda</h1>
+            <br>
             <!-- <h2>Full Stack Developer | Tech Enthusiast</h2> -->
             <!-- <p>Passionate about creating web applications and solving problems.</p> -->
             <p>I am a passionate and socially active professional with strong leadership and teamwork skills. I am an effective communicator known for prioritizing tasks and maintaining high productivity levels. I am dedicated to achieving goals and driving success through collaboration and efficient task management.</p>
             <br>
-            <p>Without good paragraphs, you simply cannot clearly convey sequential points and their relationships to one another. Many novice writers tend to make a sharp distinction between content and style, thinking that a paper can be strong in one and weak in the other, but focusing on organization shows how content and style converge in deliberative academic writing. Your professors will view even the most elegant prose as rambling and tedious if there isn’t a careful, coherent argument to give the text meaning. Paragraphs are the “stuff ” of academic writing and, thus, worth our attention here.</p>
+            <!-- <p>Without good paragraphs, you simply cannot clearly convey sequential points and their relationships to one another. Many novice writers tend to make a sharp distinction between content and style, thinking that a paper can be strong in one and weak in the other, but focusing on organization shows how content and style converge in deliberative academic writing. Your professors will view even the most elegant prose as rambling and tedious if there isn’t a careful, coherent argument to give the text meaning. Paragraphs are the “stuff ” of academic writing and, thus, worth our attention here.</p> -->
             <div class="button-container">
-                <button class="btn btn-color-2" id="linkedin" onclick="window.open('./assets/trishaResume1.pdf')">See Resume</button>
+                <button class="btn btn-color-2" id="linkedin" onclick="window.open('./assets/trishaResume.pdf')">See Resume</button>
                 <!-- <button class="btn btn-color-1" id="github" onclick="location.href = './#contact'">Contact Info</button> -->
             </div>
             <div class="socials-container">
@@ -96,7 +97,7 @@
             </div>
             <div class="skill-card">
                 <img src="./assets/typescript.png" alt="Git/GitHub">
-                <p>typeScript</p>
+                <p>TypeScript</p>
             </div>
             <div class="skill-card">
                 <img src="./assets/mySQL.png" alt="Git/GitHub">
@@ -111,13 +112,16 @@
                 <h2>Vice Chairperson</h2>
                 <h3>ACM Symbiosis Institute of Technology</h3>
                 <p>Duration: Jun 2024 - Present</p>
-                <p>Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel urna quis elit dictum hendrerit.</p>
+                <br>
+                <p>• Successfully ensured the timely execution of all industry expert sessions, maintaining consistent communication and coordination to facilitate high-quality events and professional engagements.</p>
+                <p>• Effectively organized Tech Vortex, a major college event and project exhibition, encouraging participation from international students and highlighting advanced technological projects.</p>
             </div>
             <div class="experience-card">
-                <h2>Inter</h2>
-                <h3>Company Name</h3>
+                <h2>Intern</h2>
+                <h3>Tech Efficio</h3>
                 <p>Duration: Jun 2024 - Jul 2024</p>
-                <p>Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel urna quis elit dictum hendrerit.</p>
+                <br>
+                <p>• Integrated APIs for real-time data, optimized code performance, collaborated in Agile environments, documented processes, and actively shared knowledge while continuously learning new technologies.</p>
             </div>
             <!-- Add more experience cards as needed -->
         </div>
@@ -128,14 +132,26 @@
             <div class="project-card">
                 <h2>Weather Forecast Application</h2>
                 <img src="./assets/weatherApp.png" alt="Project 1">
-                <p>Developed a responsive weather forecast application using AngularJS to display current weather conditions along with details such as UV index, humidity, air quality, sunrise and sunset times, and visibility. The app provides an intuitive interface, dynamically updating to ensure accurate and real-time weather data.</p>
+                <p>Developed a dynamic weather application using Angular, TypeScript, HTML, and CSS, integrating a third-party weather API for real-time data. It Features a responsive design, detailed weather information, and a user-friendly interface.</p>
                 <a href="#" class="btn btn-color-1">View More</a>
             </div>
             <div class="project-card">
                 <h2>Subjective Answer Analysis System</h2>
                 <img src="./assets/studentDashboard.png" alt="Project 2">
                 <img src="./assets/teacherDashboard.png" alt="Project 2">
-                <p>Created a system for conducting subjective exams that uses NLP to evaluate student responses. The system calculates a similarity score between the student answers and the teacher's provided answer script, ensuring accurate and fair assessment based on semantic similarity. </p>
+                <p>Developed a subjective exam evaluation system using HTML, CSS, and JavaScript, integrating NLP to compute similarity scores for accurate and fair assessments.</p>
+                <a href="#" class="btn btn-color-1">View More</a>
+            </div>
+            <div class="project-card">
+                <h2>Amazon Clone</h2>
+                <img src="./assets/amazonClone.png" alt="Project 3">
+                <p>Created an Amazon clone using HTML and CSS, showcasing skills in frontend development and responsive web design.</p>
+                <a href="#" class="btn btn-color-1">View More</a>
+            </div>
+            <div class="project-card">
+                <h2>Flappy Bird</h2>
+                <img src="./assets/flappyBird.png" alt="Project 4">
+                <p>Developed a Flappy Bird game using HTML, CSS, and JavaScript, demonstrating proficiency in game mechanics and interactive design.</p>
                 <a href="#" class="btn btn-color-1">View More</a>
             </div>
             <!-- Add more project cards as needed -->
